Controller da CpuView implementado; Estilização do AreaChart da CpuView adicionada; Package model adicionado ao module-info; Correções gerais e otimização de código realizadas